[gd_scene load_steps=7 format=3 uid="uid://b2jfg4i36t5w8"]

[ext_resource type="FontFile" uid="uid://dm0ty0llj8t3r" path="res://Fonts/DungeonFont.ttf" id="1_3up2y"]
[ext_resource type="Script" path="res://Script/setting_menu.gd" id="1_561kl"]

[sub_resource type="LabelSettings" id="LabelSettings_ntmte"]
font = ExtResource("1_3up2y")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_a8rqe"]
font = ExtResource("1_3up2y")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_m8lck"]
font = ExtResource("1_3up2y")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_gqkfu"]
font = ExtResource("1_3up2y")
font_size = 32

[node name="setting_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_561kl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.321569, 0.266667, 0.537255, 1)

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_3up2y")
theme_override_font_sizes/font_size = 32
current_tab = 1
tab_focus_mode = 1

[node name="Audio" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="Master" type="HBoxContainer" parent="TabContainer/Audio"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Audio/Master"]
custom_minimum_size = Vector2(150, 48)
layout_mode = 2
text = "Master"
label_settings = SubResource("LabelSettings_ntmte")

[node name="Master" type="HScrollBar" parent="TabContainer/Audio/Master"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
size_flags_vertical = 4
min_value = -24.0
max_value = 0.0
step = 1.0

[node name="SFX" type="HBoxContainer" parent="TabContainer/Audio"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Audio/SFX"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "SFX"
label_settings = SubResource("LabelSettings_a8rqe")

[node name="SFX" type="HScrollBar" parent="TabContainer/Audio/SFX"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
size_flags_vertical = 4
min_value = -24.0
max_value = 0.0
step = 1.0

[node name="Music" type="HBoxContainer" parent="TabContainer/Audio"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Audio/Music"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Music"
label_settings = SubResource("LabelSettings_m8lck")

[node name="Music" type="HScrollBar" parent="TabContainer/Audio/Music"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
size_flags_vertical = 4
min_value = -24.0
max_value = 0.0
step = 1.0

[node name="Cridit" type="VBoxContainer" parent="TabContainer"]
custom_minimum_size = Vector2(0, 600)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Cridit"]
custom_minimum_size = Vector2(0, 520)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 2
text = "Program , Design:
	ShuQiu

test:
	zhechi  https://twitter.com/zhechi0319

Arts:
	2D Pixel Dungeon Asset Pack By Pexel_Poem  https://pixel-poem.itch.io/
	Rocky Roads By Essssam  https://essssam.itch.io/
	Forks of Flame By XYEzawr  https://xyezawr.itch.io/
	Pipoya VFX LightPillar By Pipoya  https://pipoya.itch.io/
	The Free Archives © Dreams Circle  https://dreams-circle.itch.io/fa-01
	VFX Free Pack By CodeManu  https://codemanu.itch.io/
	16x16 Assorted RPG Icons By Shade  https://merchant-shade.itch.io/
	Tobi’s Magic Circle Hub By Tobi  https://forum.arcaneodyssey.dev/t/tobis-magic-circle-hub/77452
	Lucky Loops Ultimate Ui Pixelart Icons By Luck  https://lucky-loops.itch.io/ultimate-ui-pixelart-icons  (CC BY4.0)
	Icons Essential By Crusenoho  https://crusenho.itch.io/icons-essential-pack-free-icons  (CC BY 4.0)
	Fantasy Wooden GUI By KanekiZLF  https://kanekizlf.itch.io/

Sounds:
	Minifantasy_Dungeon_SFX By Leohpaz  https://leohpaz.itch.io/
	200 Free SFX By Kronbits  https://kronbits.itch.io/freesfx

BGMs:
	Daydream By Shimtone  https://dova-s.jp/bgm/play20244.html
	
Fonts:
	Dungeon Font By Vrtxrry  https://vrtxrry.itch.io/
"
selection_enabled = true

[node name="Button" type="Button" parent="."]
layout_mode = 2
anchor_left = 0.762
anchor_right = 1.0
anchor_bottom = 0.061
offset_left = 169.712
offset_right = 1.0
offset_bottom = 6.864

[node name="Label" type="Label" parent="Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_3up2y")
text = "Close"
label_settings = SubResource("LabelSettings_gqkfu")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="value_changed" from="TabContainer/Audio/Master/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/SFX/SFX" to="." method="_on_sfx_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/Music/Music" to="." method="_on_music_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
